# sftool

./: Cargo.toml  Cross.toml  README.md  README_EN.md
.github/workflows/: builder.yml  builder_for_arm32.yml
docker-files/: Dockerfile.armv7-unknown-linux-gnueabihf  common.sh  lib.sh  qemu.sh
sftool/: Cargo.toml
sftool-lib/: Cargo.toml
sftool-lib/src/: lib.rs  ram_command.rs  ram_stub.rs  reset.rs  speed.rs  write_flash.rs
sftool/src/: main.rs
